Bug 609296 - Make accessing properties like toString on numbers/booleans fast. r=bhackett